--- a/view/admin/store-productAnswer.html
+++ b/view/admin/store-productAnswer.html
@@ -882,7 +882,7 @@ $(document).ready(function() {
 
     $(document).on('click', 'button[name=goBtn]', function() {
         let productSeq = $(this).attr('seq');
-        location.href = "http://localhost:8090/view/store/storeDetail.html?seq="+productSeq;
+        location.href = "http://192.168.0.231:8090/view/store/storeDetail.html?seq="+productSeq;
     })
 
     $(document).on('click', 'button[name=insertAnswerBtn]', function() {
