--- a/view/store/storeDetail.html
+++ b/view/store/storeDetail.html
@@ -1096,7 +1096,7 @@
     // 상품 후기 숫자 카운팅
     // var qccount;
     // $.ajax({
-    // url:"http://localhost:3000/storeRevCount",
+    // url:"http://192.168.0.231:3000/storeRevCount",
     // type:"get",
     // data:{productSeq:seq},
     // async : false,
