--- a/view/writeTest.html
+++ b/view/writeTest.html
@@ -63,7 +63,7 @@ $(document).ready(function() {
 		slangFilter($('#_cardTitle').val());
 		/*
 		$.ajax({
-			url:"http://localhost:3000/cardWrite",
+			url:"http://192.168.0.231:3000/cardWrite",
 			type:"post",
 			data: new FormData($('#upload_frm')[0]),
 			enctype:"multipart/form-data",
