--- a/view/admin/store-salesStatus.html
+++ b/view/admin/store-salesStatus.html
@@ -490,7 +490,7 @@ function selectDay(){
 // 총 매출액 그래프 호출 함수
 function lineGraph(){     
     $.ajax({
-        url:"http://localhost:3000/graphList",
+        url:"http://192.168.0.231:3000/graphList",
         type:"post",
         data:{sDate:$(".s_date").val(),eDate:$(".e_date").val(),sType:$("#sele2").val()},
         success:function(list){
@@ -561,7 +561,7 @@ function lineGraph(){
 
  function mapList(){
      $.ajax({
-         url:"http://localhost:3000/mapList",
+         url:"http://192.168.0.231:3000/mapList",
          type:"post",
          data:{sDate:$(".s_date").val(),eDate:$(".e_date").val()},
          success:function(list){
@@ -614,7 +614,7 @@ function lineGraph(){
 
  function barChart(){
      $.ajax({
-         url:"http://localhost:3000/pieChart",
+         url:"http://192.168.0.231:3000/pieChart",
          type:"post",
          data:{sDate:$(".s_date").val(),eDate:$(".e_date").val()},
          success:function(list){
@@ -692,7 +692,7 @@ function lineGraph(){
 
  function pieChart(){
     $.ajax({
-         url:"http://localhost:3000/pieChart",
+         url:"http://192.168.0.231:3000/pieChart",
          type:"post",
          data:{sDate:$(".s_date").val(),eDate:$(".e_date").val()},
          success:function(list){
