--- a/view/community/questionDetail.html
+++ b/view/community/questionDetail.html
@@ -441,21 +441,21 @@ $(document).ready(function(){
 
     
     if(sessionId==null){
-        $("#_replyinput").attr("src","http://localhost:3000/upload/wanza.png");
+        $("#_replyinput").attr("src","http://192.168.0.231:3000/upload/wanza.png");
         }else{
-        $("#_replyinput").attr("src","http://localhost:3000/upload/"+sessionId.profileName);
+        $("#_replyinput").attr("src","http://192.168.0.231:3000/upload/"+sessionId.profileName);
     }
 
 
 
-    //$("#_replyinput").attr("src","http://localhost:3000/upload/"+sessionId.profileName)
+    //$("#_replyinput").attr("src","http://192.168.0.231:3000/upload/"+sessionId.profileName)
     //글 삭제하기
 
     //조회수 증가시키기
     questionReadCountUp();
     function questionReadCountUp(){
         $.ajax({
-            url:"http://localhost:3000/questionReadCountUp",
+            url:"http://192.168.0.231:3000/questionReadCountUp",
             type:"get",
             data:{questionSeq:seq},
             success:function(){
@@ -512,7 +512,7 @@ $(document).ready(function(){
     //질문글의 댓글 수 카운팅해서 가져오기
     var qccount;
     $.ajax({
-    url:"http://localhost:3000/questionCommentCount",
+    url:"http://192.168.0.231:3000/questionCommentCount",
     type:"get",
     data:{questionSeq:seq},
     async : false,
@@ -531,7 +531,7 @@ $(document).ready(function(){
 
     //해당 글에 대한 내용 뿌리기
     $.ajax({
-        url:"http://localhost:3000/questionDetail",
+        url:"http://192.168.0.231:3000/questionDetail",
         type:'post',
         data:{questionSeq:seq},
         success:function(list){
@@ -543,7 +543,7 @@ $(document).ready(function(){
                 $('.question-detail-img').remove();
             } else {
 
-                $('.question-detail-img').attr("src","http://localhost:3000/upload/"+list.questionFileName);
+                $('.question-detail-img').attr("src","http://192.168.0.231:3000/upload/"+list.questionFileName);
             }
             
             /*
@@ -575,7 +575,7 @@ $(document).ready(function(){
 
     //해당 글에 대한 댓글 내용 뿌리기
     $.ajax({
-        url:"http://localhost:3000/questionCommentList",
+        url:"http://192.168.0.231:3000/questionCommentList",
         type:'post',
         data:{questionSeq:seq},
         success:function(list){
@@ -610,7 +610,7 @@ $(document).ready(function(){
                                 
                                 + "<a href='#' class='comment-feed-item-content-author-name'>"
                                     
-                                + "<img class='comment-feed-item-content-author-image' src='http://localhost:3000/upload/" 
+                                + "<img class='comment-feed-item-content-author-image' src='http://192.168.0.231:3000/upload/" 
                                     
                                     +pfname
                                 + "' >"
@@ -630,7 +630,7 @@ $(document).ready(function(){
                                     + "<div class='comment-feed-item'>"
                                         + "<div class='comment-feed-item-content'>"
                                             + "<a href='#' class='comment-feed-item-content-author-name'>"
-                                                + "<img class='comment-feed-item-content-author-image' src='http://localhost:3000/upload/" 
+                                                + "<img class='comment-feed-item-content-author-image' src='http://192.168.0.231:3000/upload/" 
                                                 +pfname
                                                 + "' >"
                                                 + "<span class='questioncommentwriter'>" + val.nickName + "</span>"
@@ -701,7 +701,7 @@ $(document).ready(function(){
       var form = $('#comment-feed-form').serialize();
       //console.log(form);
         $.ajax({
-          url: 'http://localhost:3000/questionComment',
+          url: 'http://192.168.0.231:3000/questionComment',
           type: 'post',
           data : form,
           success:function(list){
@@ -763,7 +763,7 @@ $(document).ready(function(){
         var form = $('.comment-reply').serialize();
         console.log(form);
             $.ajax({
-                url: 'http://localhost:3000/questionCommentAnswer',
+                url: 'http://192.168.0.231:3000/questionCommentAnswer',
                 type: 'post',
                 data : form,
                 success:function(list){
@@ -787,7 +787,7 @@ $(document).ready(function(){
     //질문과답변 댓글 삭제하기
     function commentdel(commentseq){
         $.ajax({
-            url:"http://localhost:3000/questionCommentdel",
+            url:"http://192.168.0.231:3000/questionCommentdel",
             type:"get",
             data : {qcSeq:commentseq},
             success:function(){
