--- a/view/myPage/mainMyPage.html
+++ b/view/myPage/mainMyPage.html
@@ -471,7 +471,7 @@
                             </div>
                             <div class="story_img_wrap">
                                 <a href="#none">
-                                    <img src="http://localhost:3000/upload/1620888723828.jpg" alt="">
+                                    <img src="http://192.168.0.231:3000/upload/1620888723828.jpg" alt="">
                                 </a>
                             </div>
                         </div>
@@ -492,7 +492,7 @@
                             </div>
                             <div class="story_img_wrap">
                                 <a href="#none">
-                                    <img src="http://localhost:3000/upload/1620888723828.jpg" alt="">
+                                    <img src="http://192.168.0.231:3000/upload/1620888723828.jpg" alt="">
                                 </a>
                             </div>
                         </div>
@@ -601,7 +601,7 @@
 
                                     <div class="img_wrap">
                                         <a href="#none">
-                                            <img src="http://localhost:3000/upload/product1.jpg" alt="">
+                                            <img src="http://192.168.0.231:3000/upload/product1.jpg" alt="">
                                         </a>
                                     </div>
 
@@ -738,7 +738,7 @@ function getSortData(status) {
 //배송현황 갯수 구하기
 function getMyOrderStatusCount() {
 	$.ajax({
-		url:"http://localhost:3000/getMyOrderStatusCount",
+		url:"http://192.168.0.231:3000/getMyOrderStatusCount",
 		type:"get",
 		data:{userSeq:sessionId.userSeq},//{userSeq:sessionId.userSeq}
 		success:function(data){
@@ -759,7 +759,7 @@ function getMyOrderStatusCount() {
 //주문내역 리스트
 function getMyOrderList(jdata) {
 	$.ajax({
-		url:"http://localhost:3000/getMyOrderList",
+		url:"http://192.168.0.231:3000/getMyOrderList",
 		type:"post",
 		data:jdata, //orderStatus:3 4 0 1 2
 		success:function(list){
@@ -779,7 +779,7 @@ function getMyOrderList(jdata) {
                     }
                     //상품시작
                     app+= '<div class="order_product"><div class="img_wrap">'
-                    app+= '<a href="../store/storeDetail.html?seq='+val.productSeq+'"><img src="http://localhost:3000/upload/'+val.productFileName+'" alt=""></a></div>'
+                    app+= '<a href="../store/storeDetail.html?seq='+val.productSeq+'"><img src="http://192.168.0.231:3000/upload/'+val.productFileName+'" alt=""></a></div>'
                     app+= '<div class="order_box"><table><col width="50%"><col width="50%">'
                     app+= '<tr><td colspan="2" class="small"><a href="#none">'+val.productMaker+'</a></td></tr>'
                     app+= '<tr><td><a href="#none">'+val.productName+'</a></td><td>'
@@ -807,7 +807,7 @@ function getMyOrderList(jdata) {
 //내가 쓴 글 리스트
 function getMyStoryList() {
 	$.ajax({
-		url:"http://localhost:3000/getMyStoryList",
+		url:"http://192.168.0.231:3000/getMyStoryList",
 		type:"post",
         data:{userSeq:sessionId.userSeq},
 		success:function(list){
@@ -831,7 +831,7 @@ function getMyStoryList() {
                     app+= '</div></div>'
                     app+= '<div class="story_img_wrap">'
                     app+= '<a href="../community/storyDetail.html?seq='+val.cardSeq+'">'
-                    app+= '<img src="http://localhost:3000/upload/'+val.cardFileName+'" alt="">'
+                    app+= '<img src="http://192.168.0.231:3000/upload/'+val.cardFileName+'" alt="">'
                     app+= '</a></div></div>'
                 });
             }
@@ -844,7 +844,7 @@ function getMyStoryList() {
 // 유저 정보 불러오기 
 function getUserInfo(){
     $.ajax({
-        url:"http://localhost:3000/getUserAllInfoCopy",
+        url:"http://192.168.0.231:3000/getUserAllInfoCopy",
         type:"post",
         data:{userSeq:sessionId.userSeq},
         success:function(data){
@@ -854,7 +854,7 @@ function getUserInfo(){
             if(data.profileName != '0') {
                 $('.fa-user-circle-o').hide();
                 $('.profile_img').css('border', '0px');
-                $('.profile_img').append($('<img src="http://localhost:3000/upload/'+data.profileName+'" style="width: 158px;height: 158px; object-fit:cover; border-radius: 70%;" />'));
+                $('.profile_img').append($('<img src="http://192.168.0.231:3000/upload/'+data.profileName+'" style="width: 158px;height: 158px; object-fit:cover; border-radius: 70%;" />'));
             }
 
         },error:function(){
