질답 조금 수정

--- a/view/login/login.html
+++ b/view/login/login.html
@@ -247,7 +247,7 @@
                 async: false,
                 dataType: 'text',
                 success:function(email){
-                    alert("kakao ajax 성공");
+                    //alert("kakao ajax 성공");
 
                     //console.log(session.setattribute(getItem("login")));
                     klogin(email);
@@ -277,11 +277,11 @@
                     },
             //async : false,
             success: function (data) {
-                alert('klogin success');
+                //alert('klogin success');
                 if(isEmpty(data.email) == false) {
                     sessionStorage.setItem("login", JSON.stringify(data));
                     location.href = "../../index.html";
-                    alert(sessionStorage.setItem("login", JSON.stringify(data)));
+                    //alert(sessionStorage.setItem("login", JSON.stringify(data)));
                 } else {
                     alert('klogin fail');
                 }
@@ -294,7 +294,7 @@
     
     $(document).on("click", "#kakao-btn", function(){
         $("#kakao-btn").on('click', function(){
-            alert('로긴카카오 클릭됨');
+            //alert('로긴카카오 클릭됨');
             location.href = "https://kauth.kakao.com/oauth/authorize?client_id=e55eb67c927feac9076da403729a23f8&redirect_uri=http://localhost:8090/view/login/login.html&response_type=code"
         })
     })
